# afl-timewarp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  QuickStartGuide.txt  README  afl-cmin  afl-fuzz.c  afl-qemu-trace  config.h  debug.h  types.h
docs/: README
fuzzwarp/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Vagrantfile  afl-timewarp.c  afl-timewarp.h  export.sh  fuzz_targets  fuzzwarp  provision.sh  qemu-afl.sh  reviveme  reviveme.c  strace_me.sh  test.sh  test_nodisloc.sh  timewarp.sh  timewarp_test  timewarp_test.c
fuzzwarp/gunnar/shared/: MakefileDefinitions
fuzzwarp/gunnar/shared/plaintext_server/: BuildConfig  GenericMakefile  Makefile  demo.c  handler  print_flag.c  server  server.c  tools.c  tools.h  wrapper.c
fuzzwarp/test_in/: in1
fuzzwarp/timewarp_dev/: Makefile
fuzzwarp/timewarp_dev/src/: afl-timewarp.c  afl-timewarp.h  timewarp_test.c
qemu_mode/: build_qemu_support.sh  todos
qemu_mode/patches/: afl-qemu-cpu-inl.h  afl-qemu-timewarp.h
